<resources>
    <string name="app_name">DS</string>
    <string name="home">Pocetna</string>
    <string name="products">Artikli</string>
    <string name="orders">Porudzbine</string>
    <string name="porudzbina">Porudzbina</string>
    <string name="dodaj">Dodaj</string>
    <string name="ime">Ime</string>
    <string name="iznos">Iznos</string>
    <string name="nazad">Nazad</string>
    <string name="korisnicko_ime">Korisnicko ime</string>
    <string name="uloguj_se">Uloguj se</string>
    <string name="sifra">Lozinka</string>
    <string name="ime_proizvoda">Ime proizvoda:</string>
    <string name="adresa">Adresa</string>
    <string name="telefon">Broj telefona</string>
    <string name="id_proizvoda">ID proizvoda:</string>
    <string name="plati">Plati</string>
    <string name="info">Info</string>
    <string name="plati_kasnije">Plati kasnije</string>
    <string name="kartica">Prislonite karticu</string>
    <string name="cena">Cena</string>
    <string name="cena_proizvoda">Cena:</string>
    <string name="brisi">Brisi</string>
    <string name="izmeni">Izmeni</string>
    <string name="dostava">dostava</string>
    <string name="print">Print</string>
    <string name="kurir">kurir</string>
    <string name="unesi_ime">Unesite ime:</string>
    <string name="proizvodi">Izberite koje proizvode zelite da vratite</string>
    <string name="unesi_sifra">Unesite lozinku:</string>
    <string name="unesi_koris">Unesite korisnicko ime:</string>
    <string name="unesi_ime_proizvoda">Unesite ime proizvoda:</string>
    <string name="unesi_cena">Unesite cenu proizvoda:</string>
</resources>