<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewStaffActivity"
    android:background="@color/cyan">


    <Button
        android:id="@+id/button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/dodaj"
        android:textColor="@color/white"
        android:background="@drawable/merch_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/unesi_ime"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imeEdit"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/ime"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/ime"
        app:layout_constraintTop_toBottomOf="@+id/ime" />

    <TextView
        android:id="@+id/korisnicko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/unesi_koris"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/imeEdit"
        app:layout_constraintTop_toBottomOf="@+id/imeEdit" />

    <EditText
        android:id="@+id/korisnickoEdit"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/korisnicko_ime"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/korisnicko"
        app:layout_constraintTop_toBottomOf="@+id/korisnicko" />

    <TextView
        android:id="@+id/lozinka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/unesi_sifra"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/korisnickoEdit"
        app:layout_constraintTop_toBottomOf="@+id/korisnickoEdit" />

    <EditText
        android:id="@+id/lozinkaEdit"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/lozinka"
        app:layout_constraintTop_toBottomOf="@+id/lozinka" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kurir"
        app:layout_constraintStart_toStartOf="@+id/lozinkaEdit"
        app:layout_constraintTop_toBottomOf="@+id/lozinkaEdit"  />

</androidx.constraintlayout.widget.ConstraintLayout>