<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayActivity">

    <TextView
        android:id="@+id/kartica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/kartica"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/print"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/cyan4"
        android:contentDescription="@string/print"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/actionModePasteDrawable" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/cyan4"
        android:contentDescription="@string/nazad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <CheckBox
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/dostava"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>