<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity"
    android:background="@color/cyan">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/ime"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/adresa"
        android:autofillHints="postalAddress"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/telefon"
        android:autofillHints="phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/address"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/add"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/dodaj"
        android:textColor="@color/white"
        android:background="@drawable/merch_button"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone"/>

</androidx.constraintlayout.widget.ConstraintLayout>