<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentOrderActivity"
    android:background="@color/cyan">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/plati"
        android:textColor="@color/white"
        android:background="@drawable/merch_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/cena"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pay"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/prices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/price2"
        app:layout_constraintStart_toStartOf="@+id/address2"
        app:layout_constraintTop_toTopOf="@+id/price2" />

    <Button
        android:id="@+id/pay_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/plati_kasnije"
        android:textColor="@color/white"
        android:background="@drawable/merch_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/address1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/adresa"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/price2"
        app:layout_constraintEnd_toEndOf="@+id/price2"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="@+id/price2" />

    <TextView
        android:id="@+id/address2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/address1"
        app:layout_constraintStart_toStartOf="@+id/phone2"
        app:layout_constraintTop_toTopOf="@+id/address1" />

    <TextView
        android:id="@+id/phone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/telefon"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/address1"
        app:layout_constraintEnd_toEndOf="@+id/address1"
        app:layout_constraintStart_toStartOf="@+id/address1" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/ime"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/phone1"
        app:layout_constraintEnd_toEndOf="@+id/phone1"
        app:layout_constraintStart_toStartOf="@+id/phone1" />

    <TextView
        android:id="@+id/phone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/phone1"
        app:layout_constraintStart_toEndOf="@+id/phone1"
        app:layout_constraintTop_toTopOf="@+id/phone1" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/name1"
        app:layout_constraintStart_toStartOf="@+id/phone2"
        app:layout_constraintTop_toTopOf="@+id/name1" />
</androidx.constraintlayout.widget.ConstraintLayout>